plugins {
    id 'java'
    id "application"
}

group 'com.inkcodes'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    javaMainClass = "com.inkcodes.rpg.Main"
}

application {
    mainClassName = javaMainClass
}


java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

dependencies {
    implementation 'com.googlecode.lanterna:lanterna:3.0.3'
    implementation("com.google.guava:guava:29.0-jre")
}
